# zimtool

./: README.md  pyproject.toml
tests/: test_zimtool.py
youtube2zim/: constants.py  entrypoint.py  processing.py  scraper.py  youtube.py
youtube2zim/playlists/: scraper.py
