[tool.poetry]
name = "zimtool"
version = "0.1.0"
description = "Generate ZIM files using openzim tools"
authors = ["Blondel MONDESIR <deldesir@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/deldesir/zimtool"
documentation = "deldesir.github.io/zimtool"
keywords = ["zim", "offline"]
classifiers = [
    "Development Status :: 2- Pre-Alpha",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
    "Private :: Do not upload",
]

[tool.poetry.dependencies]
python = "^3.8, <3.12"
zimscraperlib = "*"
google-api-python-client = "*"
google-auth-oauthlib = "*"
google-auth-httplib2 = "*"
oauth2client = "*"

[tool.poetry.group.nox.dependencies]
nox-poetry = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "*"

[tool.poetry.group.type_check.dependencies]
mypy = "*"

[tool.poetry.group.lint.dependencies]
flake8 = "*"
flake8-bugbear = "*"
flake8-broken-line = "*"
flake8-comprehensions = "*"
pep8-naming = "*"
pyproject-flake8 = "*"

[tool.poetry.group.fmt.dependencies]
black = "*"
isort = "*"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "*"
mkdocs-htmlproofer-plugin = "*"
mkdocstrings = { version = "*", extras = ["python"] }
## Autodoc.
mkdocs-gen-files = "*"
mkdocs-literate-nav = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
